Actions
Bug #12543
closedchxge: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
cc1: warnings being treated as errors ../../common/io/chxge/pe.c: In function 'pe_start': ../../common/io/chxge/pe.c:417: error: comparison between pointer and integer ../../common/io/chxge/pe.c:422: error: comparison between pointer and integer ../../common/io/chxge/pe.c:447: error: comparison between pointer and integer ../../common/io/chxge/pe.c:515: error: comparison between pointer and integer ../../common/io/chxge/pe.c:520: error: comparison between pointer and integer ../../common/io/chxge/pe.c:533: error: comparison between pointer and integer *** Error code 1 dmake: Warning: Command failed for target `obj64/pe.o' Current working directory /code/illumos-gate/usr/src/uts/sparc/chxge
Updated by Electric Monk about 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 4e2c3273e98e347b3b0d6ea03be57eda0b8def7b
commit 4e2c3273e98e347b3b0d6ea03be57eda0b8def7b Author: Toomas Soome <tsoome@me.com> Date: 2020-05-11T06:01:56.000Z 12543 chxge: NULL pointer errors Reviewed by: Robert Mustacchi <rm@fingolfin.org> Reviewed by: Patrick Mooney <pmooney@pfmooney.com> Reviewed by: Jorge Schrauwen <registration@blackdot.be> Approved by: Garrett D'Amore <garrett@damore.org>
Actions