12543 chxge: NULL pointer errors Reviewed by: Robert Mustacchi <rm@fingolfin.org> Reviewed by: Patrick Mooney <pmooney@pfmooney.com> Reviewed by: Jorge Schrauwen <registration@blackdot.be> Approved by: Garrett D'Amore <garrett@damore.org>